--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .env
 /.venv
 /__pycache__
+/infra/__pycache__
+/.pytest_cache
+/infra/database/__pycache__
+/tests/__pycache__
+/domain/__pycache__
